--- a/css/css.css
+++ b/css/css.css
@@ -6,6 +6,14 @@ body{
    /* width: 200px;
     height: 200px;
     px is hard code*/
-    width: 50%;
+    /*width: 50%;
     height: 50%;
+    % only works on width*/
+}
+
+.using-rem{
+    font-size:2rem;
+}
+.using-em{
+    
 }
