--- a/css/css.css
+++ b/css/css.css
@@ -21,3 +21,8 @@ body{
 .using-em{
     font-size:1.5em;
 }
+.using-viewport{
+    background-color: powderblue;
+    width: 40vw;
+    height: 40vh;
+}
