--- a/css/css.css
+++ b/css/css.css
@@ -26,3 +26,8 @@ body{
     width: 40vw;
     height: 40vh;
 }
+.using-percent{
+    background-color: seagreen;
+    width:69%;
+    height:25%;
+}
