--- a/css/css.css
+++ b/css/css.css
@@ -46,6 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+My code starts here
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 html{
     font-size: 22px;
 }
