--- a/css/css.css
+++ b/css/css.css
@@ -51,6 +51,7 @@ My code starts here
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 html{
     font-size: 22px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 body{
     background-color: blueviolet;
