--- a/css/css.css
+++ b/css/css.css
@@ -55,6 +55,7 @@ html{
 }
 body{
     background-color: blueviolet;
+    background-image:url("../images/white_brick_wall.png");
 }
 .sizing{
     border:5px orangered solid;
@@ -85,5 +86,10 @@ body{
     font-size: 16px;
     line-height: 1.375rem;
     font-weight: bold;
-    font-style: oblique;
+    font-style: italic;
+
+    letter-spacing: 0.1em;
+    text-decoration: underline;
+
+
 }
