--- a/css/css.css
+++ b/css/css.css
@@ -56,7 +56,8 @@ html{
 body{
     background-color: blueviolet;
     background-image:url("../images/white_brick_wall.png");
-    background-repeat: repeat-x;
+    background-repeat: no-repeat;
+    
 }
 .sizing{
     border:5px orangered solid;
@@ -79,6 +80,9 @@ body{
     background-color: powderblue;
     width: 40vw;
     height: 40vh;
+    background-image:url("../images/bread.jpg");
+    background-position: 40px 20 px;
+    background-repeat: no-repeat;
 }
 .using-percent{
     background-color: seagreen;
